feat: support use TextHighlight in iframe

--- a/iframeHtml/iframe.html
+++ b/iframeHtml/iframe.html
@@ -2,4 +2,12 @@
   <h1>asdasdasdsdsadsadsadsadadasd</h1>
   <h1>asdasdjfdhkfdjghdfjgdf</h1>
   <p>sdasdasdasdsdsadsadasd</p>
+  <h1>asdasdasdsdsadsadsadsadadasd</h1>
+  <h1>asdasdjfdhkfdjghdfjgdf</h1>
+  <p>sdasdasdasdsdsadsadasd</p>
+  <h1>asdasdasdsdsadsadsadsadadasd</h1>
+  <h1>asdasdjfdhkfdjghdfjgdf</h1>
+  <p>sdasdasdasdsdsadsadasd</p>
+  <button id="serialize">serialize</button>
+  <button id="deserialize">deserialize</button>
 </body>
