--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Text Highlighter</title>
   </head>
   <body>
+    <iframe id="iframe" src="./iframeHtml/iframe.html" height="500px"></iframe>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
