--- a/example/case/index.html
+++ b/example/case/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Text Highlighter</title>
+    <title>Sentence Highlighter</title>
   </head>
   <body>
-    <iframe id="iframe" src="./iframeHtml/iframe.html" height="500px"></iframe>
+    <!-- <iframe id="iframe" src="./iframeHtml/iframe.html" height="500px"></iframe> -->
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
